addCamFix
