# routes/fix_cam.go
@@ -13,4 +13,5 @@ func FixRoute(app *fiber.App) {
 	app.Put("/api/v1/updatemac", camfix.UpdateMacUser)
 	app.Patch("/api/v1/type/:id", camfix.UpdateCamera)
 	app.Delete("/api/v1/deletecam/:id", camfix.DeleteCam)
+	app.Get("/api/v1/sync-camfix", camfix.SyncCamFixWithConfig)
 }
